--- a/css/style.css
+++ b/css/style.css
@@ -1,131 +1,155 @@
-body {
+body{
   background-color: #efefef;
 }
 
-.container {
-  background-color: #fff;
-  width: 920px;
-  margin:0 auto;
+.box1,.box2,.box3,.boxA,.box6 {
+  width: 1040px;
+  margin-left: 163px;
+  margin-right: 163px;
 }
 
-.container::after {
-  clear: both;
-  display: block;
-  content: "";
+.box1 {
+  background-color: #fff;
+  margin-top: 48px;
 }
 
 .logo {
-  text-align: center;
-  color: #333;
-  padding: 30px;
+  font-size: 26px;
+  color: #444;
   margin: 0;
+  padding: 36px 0 30px 40px;
 }
 
-.header-navigation {
-  background-color: #333;
-  width: 920px;
-  margin:0 auto;
-  padding: 10px 0;
+.box2 {
+  background-color: #fff;
 }
 
-.header-navigation:after {
+.box2 ul {
+  margin: 0 40px 0 40px;
+  padding: 0;
+  height: 44px;
+  border-top: solid 1px #ededed;
+  border-bottom: solid 1px #ededed;
+}
+
+.box2::after {
   clear: both;
   display: block;
   content: "";
 }
 
-ul {
-  margin: 0;
-}
-
-.header-navigation li {
+.box2 li {
   float: left;
+  font-size: 12px;
   list-style-type: none;
-  padding-right: 30px;
-  font-size: 5px;
+  padding: 16px 40px 16px 0;
 }
 
-.header-navigation li:last-child {
-  padding: 0;
-}
-
-.header-navigation li a {
-  color: #ddd;
+.box2 li a {
+  color: #444;
   text-decoration: none;
 }
 
-.left-contents {
-  width: 650px;
-  padding-top: 5px;
-  float: left;
+.box3 {
+  background-color: #fff;
 }
 
-.right-contents {
-  width: 225px;
-  padding: 5px 0 0 45px;
-  float: right;
-}
-.card-contents {
-  padding-top: 20px;
+.image {
+  width: 940px;
+  height: 198px;
+  margin: 24px 40px 0 40px;
+  border:solid 1px #ededed;
 }
 
-.card-contents::after {
-  clear: both;
-  display: block;
+.boxA {
+  background-color: #fff;
+  padding-top: 50px;
+  padding-bottom: 200px;
+}
+
+.boxA::after {
   content: "";
+  display: block;
+  clear: both;
 }
 
-.contents-image {
-  float: left;
-  padding: 10px 15px 0 30px;
-  width: 150px;
-  height: 150px;
+.box4 {
+  float:left;
+  width: 65%;
+}
+
+.box4 h1 {
+  font-size: 22px;
+  color: #444;
+  padding-left: 40px;
+  font-weight: normal;
+  margin-bottom: 32px;
 }
 
 .date {
-  font-size: 5px;
+  padding-left: 40px;
+  font-size: 12px;
+  margin-bottom: 20px;
+  color: #444;
 }
 
 .contents {
-  font-size: 10px;
+  padding-bottom: 48px;
+  margin: 0 10px 0 40px;
+  font-size: 12px;
+  color: #444;
+  border-bottom: double 4px #ededed;
 }
 
-h4 {
-  color: #69c;
-}
-
-.latest-article {
-  color: #333;
-}
-
-.contents-image2 {
+.box5 {
   float: left;
-  width: 50px;
-  height: 50px;
+  width: 35%;
+}
+
+.information {
+  font-size: 11px;
+  color: #444;
+  margin: 14.740px 40px 36px 72px;
+}
+
+.information-contents {
+  font-size: 13px;
+  color; #444;
+  margin: 0 40px 72px 72px;
+}
+
+.recomendations {
+  font-size: 11px;
+  color: #444;
+  margin: 0 40px 36px 72px;
+}
+
+.box5 ul {
+  padding: 0;
+}
+
+.box5 li {
+  font-size: 13px;
+  color: #444;
+  list-style-type: none;
+  margin: 0 40px 24px 72px;
 }
 
 .date2 {
-  font-size: 2.5px;
+  font-size: 11px;
+  color: #444;
+  margin-left: 72px;
 }
 
-.sample-blog-title {
-  font-size: 2.5px;
-  color: #69c;
+.box6 {
+  background-color: #fff;
 }
 
-.card-contents2 {
-  padding-top: 5px
-}
-
-.card-contents2::after {
-  clear: both;
-  display: block;
-  content: "";
-}
-
-.copyright {
-  text-align: center;
-  font-size: 5px;
-  margin: 0;
-  padding: 75px 0 50px 0;
+.box6 p {
+  margin: 0 40px 48px 40px;
+  padding-top: 24px;
+  padding-bottom: 40px;
+  font-size: 12px;
+  color: #444;
+  border-top: solid 1px #ededed;
 }
